# kbase_ner

./: .gitignore  README.md  project.yml  pyproject.toml
assets/20210312-dummy/: README.md  prepare_sagemaker_ground_truth.ipynb  run-DataSink0-1-part-r-00000.bz2  run-DataSink0-1-part-r-00000.manifest
assets/20210320-glue-dir-kbase-dev-sagemaker-ground-truth/: README.md  dev.spacy  load_annotation.ipynb  prepare_sagemaker_ground_truth.ipynb  test.spacy  train.spacy
scripts/: convert.py  create_config.py  visualize_model.py
