[tool.poetry]
name = "ner"
version = "0.1.0"
description = ""
authors = ["Alexander Junge <alexander.junge@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^3.0.5"
scikit-learn = "^0.24.1"

[tool.poetry.dev-dependencies]
notebook = "^6.2.0"
s3fs = "^0.5.2"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
